--- a/src/app/Collaborateur/Annuel/get-bilan-by-id-collab/get-bilan-by-id-collab.component.html
+++ b/src/app/Collaborateur/Annuel/get-bilan-by-id-collab/get-bilan-by-id-collab.component.html
@@ -42,7 +42,7 @@ crossorigin="anonymous"
           <h5 class="h5 g-color-gray-dark-v1 mb-0">Vous</h5>
         </div>
 
-        <p>
+        <p class="form-control" id="objectifAtteints" name="objectifAtteints">
             {{ bilanAnnuel.objectifAtteints }}
         </p>
       </div>
