--- a/src/app/Collaborateur/Entretien/mes-entretiens/mes-entretiens.component.html
+++ b/src/app/Collaborateur/Entretien/mes-entretiens/mes-entretiens.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row" *ngIf="entretiens.length > 0; else noEntretiens">
     <div *ngFor="let entretien of entretiens" class="col-md-4 mb-4">
       <div class="card">
         <div class="card-body">
@@ -43,5 +43,13 @@
         </div>
       </div>
     </div>
+    
   </div>
+  <ng-template #noEntretiens>
+    <div class="row">
+      <div class="col-md-12">
+        <p>Vous n'avez aucun entretien pour le moment</p>
+      </div>
+    </div>
+  </ng-template>
 </div>
