--- a/src/app/Manager/add-fiche-de-poste/add-fiche-de-poste.component.html
+++ b/src/app/Manager/add-fiche-de-poste/add-fiche-de-poste.component.html
@@ -63,15 +63,25 @@
           <div class="col-md-6">
             <!-- Description input -->
             <div class="form-group">
-              <label for="nombrePostesDisponibles">Nombre de Postes Disponibles</label>
-              <input type="number" class="form-control" id="nombrePostesDisponibles" formControlName="nombrePostesDisponibles" placeholder="Nombre de Postes Disponibles" required
-                [ngClass]="{ 'is-invalid': managerServiceForm.get('nombrePostesDisponibles')?.invalid && managerServiceForm.get('nombrePostesDisponibles')?.touched }">
-              <div *ngIf="managerServiceForm.get('nombrePostesDisponibles')?.invalid && managerServiceForm.get('nombrePostesDisponibles')?.touched"
-                class="custom-error-message">
-                Le Nombre de Postes Disponibles est obligatoire
+              <label for="typeContrat">Type de Contrat</label>
+              <select class="form-control" id="typeContrat" formControlName="typeContrat" required
+                      [ngClass]="{ 'is-invalid': managerServiceForm.get('typeContrat')?.invalid && managerServiceForm.get('typeContrat')?.touched }">
+                      <option value="" disabled selected>-- Sélectionnez un type de contrat --</option>
+                        <option value="Professionnalisation">Professionnalisation</option>   
+                        <option value="TempsPartiel">TempsPartiel</option>
+                        <option value="ConsultantIndependant">Consultant Independant</option>  
+                      <option value="CDI">CDI</option>
+                      <option value="CDD">CDD</option> 
+                      <option value="Temporaire">Temporaire</option> 
+
+                             </select>
+              <div *ngIf="managerServiceForm.get('typeContrat')?.invalid && managerServiceForm.get('typeContrat')?.touched"
+                   class="custom-error-message">
+                Le Type de Contrat est obligatoire
               </div>
             </div>
           </div>
+          
         </div>
         <div class="row">
           <div class="col-md-6">
