--- a/src/app/Manager/display-mes-postes/PostEncours/post-by-id/post-by-id.component.html
+++ b/src/app/Manager/display-mes-postes/PostEncours/post-by-id/post-by-id.component.html
@@ -6,7 +6,7 @@
           <h6>Reference du poste : #{{poste.id}}</h6>
       </div>
       
-  <h6>Nombre de poste ouverts : {{poste.nombrePostesDisponibles}} </h6>
+  <h6>Type de Contrat: {{poste.typeContrat}} </h6>
  
   <div class="row">
      <!-- Première carte de tableau de bord -->
