--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -54,49 +54,23 @@
             <p class="mb-0 font-weight-normal float-left dropdown-header">
               Messages
             </p>
-            <a class="dropdown-item">
+
+            <a
+              class="dropdown-item"
+              (click)="redirectionChat(user.id)"
+              *ngFor="let user of listUsers"
+            >
               <div class="item-thumbnail">
                 <img
-                  src="images/faces/face4.jpg"
+                  [src]="'assets/images/' + user.image"
                   alt="image"
                   class="profile-pic"
                 />
               </div>
               <div class="item-content flex-grow">
-                <h6 class="ellipsis font-weight-normal">David Grey</h6>
-                <p class="font-weight-light small-text text-muted mb-0">
-                  The meeting is cancelled
-                </p>
-              </div>
-            </a>
-            <a class="dropdown-item">
-              <div class="item-thumbnail">
-                <img
-                  src="images/faces/face2.jpg"
-                  alt="image"
-                  class="profile-pic"
-                />
-              </div>
-              <div class="item-content flex-grow">
-                <h6 class="ellipsis font-weight-normal">Tim Cook</h6>
-                <p class="font-weight-light small-text text-muted mb-0">
-                  New product launch
-                </p>
-              </div>
-            </a>
-            <a class="dropdown-item">
-              <div class="item-thumbnail">
-                <img
-                  src="images/faces/face3.jpg"
-                  alt="image"
-                  class="profile-pic"
-                />
-              </div>
-              <div class="item-content flex-grow">
-                <h6 class="ellipsis font-weight-normal">Johnson</h6>
-                <p class="font-weight-light small-text text-muted mb-0">
-                  Upcoming board meeting
-                </p>
+                <h6 class="ellipsis font-weight-normal">
+                  {{ user.nom }} {{ user.prenom }}
+                </h6>
               </div>
             </a>
           </div>
@@ -207,94 +181,61 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/managerService/mon-equipe']">
-            <i class=" mdi mdi-account-multiple  menu-icon"></i>
+            <i class="mdi mdi-account-multiple menu-icon"></i>
             <span class="menu-title">Mon Equipe </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/managerService/mes-postes']">
+            <i class="mdi mdi mdi-briefcase menu-icon"></i>
+            <span class="menu-title">Gestion des postes </span>
           </a>
         </li>
         <li class="nav-item">
           <a
             class="nav-link"
-            data-bs-toggle="collapse"
-            href="#ui-basic"
-            aria-expanded="false"
-            aria-controls="ui-basic"
+            [routerLink]="['/managerService/postes-approuve']"
           >
-            <i class="mdi mdi mdi-briefcase menu-icon"></i>
-            <span class="menu-title">Fiches de Postes</span>
-            <i class="menu-arrow"></i>
+            <i class="mdi mdi-script menu-icon"></i>
+            <span class="menu-title">Gestion Test Technique</span>
           </a>
-          <div class="collapse" id="ui-basic">
-            <ul class="nav flex-column sub-menu">
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  [routerLink]="['/managerService/mes-postes']"
-                  >Gestion de poste
-                </a>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  [routerLink]="['/managerService/postes-approuve']"
-                  >Demandes Approuvées</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  [routerLink]="['/managerService/poste-publie']"
-                  >Demandes publiées</a
-                >
-              </li>
-            </ul>
-          </div>
         </li>
-       
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+          <a class="nav-link" [routerLink]="['/managerService/poste-publie']">
+            <i class="mdi mdi-account-card-details menu-icon"></i>
+            <span class="menu-title">Les Candidatures</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            data-bs-toggle="collapse"
+            href="#auth"
+            aria-expanded="false"
+            aria-controls="auth"
+          >
             <i class="mdi mdi-file-document-box-outline menu-icon"></i>
             <span class="menu-title">Formations</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="auth">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" [routerLink]="['#']" > Catalogue </a></li>
-              <li class="nav-item"> <a class="nav-link"  [routerLink]="['#']"> Mes Demandes  </a></li>
-              <li class="nav-item"> <a class="nav-link"  [routerLink]="['/managerService/demande-formation']"> Demandes Des Collabs  </a></li>
-
-
-           </ul>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerService/demande-formation']"
+                >
+                  Les Demandes
+                </a>
+              </li>
+            </ul>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/managerService/mes-entretiens']">
             <i class="mdi mdi-camcorder menu-icon"></i>
             <span class="menu-title">Mes Entretiens </span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/charts/chartjs.html">
-            <i class="mdi mdi-chart-pie menu-icon"></i>
-            <span class="menu-title">Charts</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/tables/basic-table.html">
-            <i class="mdi mdi-grid-large menu-icon"></i>
-            <span class="menu-title">Tables</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/icons/mdi.html">
-            <i class="mdi mdi-emoticon menu-icon"></i>
-            <span class="menu-title">Icons</span>
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="documentation/documentation.html">
-            <i class="mdi mdi-file-document-box-outline menu-icon"></i>
-            <span class="menu-title">Documentation</span>
           </a>
         </li>
       </ul>
