--- a/src/app/Collaborateur/Formation/liste-des-formations/liste-des-formations.component.css
+++ b/src/app/Collaborateur/Formation/liste-des-formations/liste-des-formations.component.css
@@ -1,111 +1,107 @@
 .card {
-    padding-top: 20px;
-    margin: 10px 0 20px 0;
-    background-color: #ffffff;
-    border: 1px solid #d8d8d8;
-    width: calc(50% - 10px); /* Moitié de la largeur de son conteneur parent, moins la marge */
-    margin-bottom: 20px;
-    border-top-width: 0;
-    border-bottom-width: 2px;
-    -webkit-border-radius: 3px;
-       -moz-border-radius: 3px;
-            border-radius: 3px;
-    -webkit-box-shadow: none;
-       -moz-box-shadow: none;
-            box-shadow: none;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-          
-  }
-  .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; /* Alignement des cartes sur l'axe principal avec un espacement égal */
-  }
-  
- 
-  
-  
-  
-  .card.hovercard {
-    position: relative;
-    width: 300px;
-    padding-top: 0;
-    overflow: hidden;
-    text-align: center;
-    background-color: #fff;
-  }
-  
-  .card.hovercard img {
-    width: 300px;
-    height: 200px;
-  }
-  
-  .card.hovercard .avatar {
-    position: relative;
-    top: -40px;
-    margin-bottom: -40px;
-  }
-  
-  .card.hovercard .avatar img {
-    width: 80px;
-    height: 80px;
-    max-width: 80px;
-    max-height: 80px;
-    -webkit-border-radius: 50%;
-       -moz-border-radius: 50%;
-            border-radius: 50%;
-  }
-  
-  .card.hovercard .info {
-    padding: 4px 8px 10px;
-  }
-  
-  .card.hovercard .info .title {
-    margin-bottom: 4px;
-    font-size: 24px;
-    line-height: 1;
-    color: #262626;
-    vertical-align: middle;
-  }
-  
-  .card.hovercard .info .desc {
-    overflow: hidden;
-    font-size: 12px;
-    line-height: 20px;
-    color: #737373;
-    text-overflow: ellipsis;
-  }
-  
-  .card.hovercard .bottom {
-    padding: 0 20px;
-    margin-bottom: 17px;
-  }
-  .bottom {
-    text-align: center; /* Alignement horizontal au centre */
-  }
-  
-  .button-container {
-    display: inline-block; /* Affichage en ligne */
-  }
-  
-  /* Ajoutez un peu d'espace entre les boutons si nécessaire */
-  .button-container button {
-    margin-right: 10px; /* Marge à droite pour séparer les boutons */
-  }
-  
-  
-  .card.people .card-bottom {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: inline-block;
-    width: 100%;
-    padding: 10px 20px;
-    line-height: 29px;
-    text-align: center;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-  }
+  padding-top: 20px;
+  margin: 10px 0 20px 0;
+  background-color: #ffffff;
+  border: 1px solid #d8d8d8;
+  width: calc(
+    50% - 10px
+  ); /* Moitié de la largeur de son conteneur parent, moins la marge */
+  margin-bottom: 20px;
+  border-top-width: 0;
+  border-bottom-width: 2px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Alignement des cartes sur l'axe principal avec un espacement égal */
+}
+
+.card.hovercard {
+  position: relative;
+  width: 300px;
+  padding-top: 0;
+  overflow: hidden;
+  text-align: center;
+  background-color: #fff;
+}
+
+.card.hovercard img {
+  width: 300px;
+  height: 200px;
+}
+
+.card.hovercard .avatar {
+  position: relative;
+  top: -40px;
+  margin-bottom: -40px;
+}
+
+.card.hovercard .avatar img {
+  width: 80px;
+  height: 80px;
+  max-width: 80px;
+  max-height: 80px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+
+.card.hovercard .info {
+  padding: 4px 8px 10px;
+}
+
+.card.hovercard .info .title {
+  margin-bottom: 4px;
+  font-size: 24px;
+  line-height: 1;
+  color: #262626;
+  vertical-align: middle;
+}
+
+.card.hovercard .info .desc {
+  overflow: hidden;
+  font-size: 12px;
+  line-height: 20px;
+  color: #737373;
+  text-overflow: ellipsis;
+}
+
+.card.hovercard .bottom {
+  padding: 0 20px;
+  margin-bottom: 17px;
+}
+.bottom {
+  text-align: center; /* Alignement horizontal au centre */
+}
+
+.button-container {
+  display: inline-block; /* Affichage en ligne */
+}
+
+/* Ajoutez un peu d'espace entre les boutons si nécessaire */
+.button-container button {
+  margin-right: 10px; /* Marge à droite pour séparer les boutons */
+}
+
+.card.people .card-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 20px;
+  line-height: 29px;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
