--- a/src/app/User/chat/chat.component.html
+++ b/src/app/User/chat/chat.component.html
@@ -1,111 +1,103 @@
-<body>
-  <!-- Layout wrapper -->
-  <div class="layout-wrapper layout-content-navbar">
-    <div class="layout-container">
-      <!-- Menu -->
+<main class="content">
+  <div class="container">
+    <h1 class="h3 mb-3">Messages</h1>
 
-      <!-- / Menu -->
+    <div class="card">
+      <div class="row">
+        <div>
+          <div class="py-2 px-4 border-bottom d-none d-lg-block">
+            <div class="d-flex align-items-center py-1">
+              <div class="position-relative">
+                <img
+                  [src]="'assets/images/' + otherUser?.image"
+                  class="rounded-circle mr-1"
+                  alt="Sharon Lessman"
+                  width="40"
+                  height="40"
+                />
+              </div>
+              <div class="flex-grow-1 pl-3">
+                <strong>
+                  &nbsp; &nbsp; &nbsp; {{ otherUser?.nom }}
+                  {{ otherUser?.prenom }}
+                </strong>
+              </div>
+              <div></div>
+            </div>
+          </div>
 
-      <!-- Layout container -->
-      <div class="layout-page">
-        <!-- Navbar -->
+          <div
+            class="position-relative"
+            #chat
+            id="chat"
+            style="height: 500px; overflow-y: auto"
+          >
+            <div class="chat-messages p-4" *ngFor="let msg of messages | async">
+              <div
+                class="chat-message-left pb-4"
+                *ngIf="
+                  msg!.id!.toString().includes(otherUser!.id!.toString());
+                  else thisUserMsg
+                "
+              >
+                <div>
+                  <img
+                    [src]="'assets/images/' + otherUser?.image"
+                    class="rounded-circle mr-1"
+                    alt="Sharon Lessman"
+                    width="40"
+                    height="40"
+                  />
+                </div>
+                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
+                  <div class="font-weight-bold mb-1">{{ otherUser?.nom }}</div>
+                  {{ msg.content }}
+                  <br />
+                  <div class="text-muted small text-nowrap mt-2">
+                    {{ whenWasItPublished(msg!.t_stamp!) }}
+                  </div>
+                </div>
+              </div>
 
-        <link
-          href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet"
-        />
-        <div class="component" style="width: 1000px">
-          <div class="col-md-10 col-xl-6 chat">
-            <div class="card">
-              <div class="card-header msg_head">
-                <div class="d-flex bd-highlight">
-                  <div class="img_cont_msg">
+              <ng-template #thisUserMsg>
+                <div class="chat-message-right mb-4">
+                  <div>
                     <img
-                      [src]="'assets/images/' + otherUser?.image"
-                      class="rounded-circle"
-                      alt="Avatar"
-                      width="45px"
+                      [src]="'assets/images/' + image"
+                      class="rounded-circle mr-1"
+                      alt="Chris Wood"
+                      width="40"
+                      height="40"
                     />
                   </div>
-                  <div class="user_info">
-                    <span>Chat {{ otherUser?.nom }}</span>
+                  <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
+                    <div class="font-weight-bold mb-1">Vous</div>
+                    {{ msg.content }}
+                    <br />
+                    <div class="text-muted small text-nowrap mt-2">
+                      {{ whenWasItPublished(msg!.t_stamp!) }}
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div #chat id="chat" class="card-body msg_card_body">
-                <!--messages - start> -->
-                <div *ngFor="let msg of messages | async">
-                  <div
-                    class="d-flex justify-content-start mb-4"
-                    *ngIf="
-                      msg!.id!.toString().includes(otherUser!.id!.toString());
-                      else thisUserMsg
-                    "
-                  >
-                    <div class="img_cont_msg">
-                      <img
-                      [src]="'assets/images/' + otherUser?.image"
-                      class="rounded-circle user_img_msg"
-                      />
-                    </div>
-                    <div class="msg_cotainer">
-                      {{ msg.content }}
-                      <span class="msg_time">{{
-                        whenWasItPublished(msg!.t_stamp!)
-                      }}</span>
-                    </div>
-                  </div>
+              </ng-template>
+            </div>
+          </div>
 
-                  <ng-template #thisUserMsg>
-                    <div class="d-flex justify-content-end mb-4">
-                      <div class="msg_cotainer_send">
-                        {{ msg.content }}
-                        <span class="msg_time_send">{{
-                          whenWasItPublished(msg!.t_stamp!)
-                        }}</span>
-                      </div>
-                      <div class="img_cont_msg">
-                        <img
-                        [src]="'assets/images/' + image"
-                          class="rounded-circle user_img_msg"
-                        />
-                      </div>
-                    </div>
-                  </ng-template>
-                </div>
-                <!--messages - end-->
-              </div>
-              <div class="card-footer">
-                <div class="input-group">
-                  <div class="input-group-append">
-                    <span class="input-group-text attach_btn"
-                      ><i class="fas fa-paperclip"></i
-                    ></span>
-                  </div>
-                  <textarea
-                    [formControl]="newMessage"
-                    name=""
-                    class="form-control type_msg"
-                    placeholder="Type your message..."
-                  ></textarea>
-                  <div class="input-group-append">
-                    <span (click)="sendMsg()" class="input-group-text send_btn"
-                      ><i class="material-icons" style="font-size: 36px"
-                        >send</i
-                      ></span
-                    >
-                  </div>
-                </div>
-              </div>
+          <div class="flex-grow-0 py-3 px-4 border-top">
+            <div class="input-group">
+              <input
+                [formControl]="newMessage"
+                type="text"
+                class="form-control"
+                placeholder="Ecrivez votre Message"
+              />
+              <button class="btn btn-primary" (click)="sendMsg()">
+                Envoyer
+              </button>
             </div>
           </div>
         </div>
       </div>
-      <!-- / Layout page -->
     </div>
-
-    <!-- Overlay -->
-    <div class="layout-overlay layout-menu-toggle"></div>
   </div>
-  <!-- / Layout wrapper -->
-</body>
+</main>
