--- a/src/app/menu/admin-menu/admin-menu.component.html
+++ b/src/app/menu/admin-menu/admin-menu.component.html
@@ -1,51 +1,185 @@
 <div class="container-scroller">
- 
   <!-- partial:partials/_navbar.html -->
   <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-  
     <div class="navbar-brand-wrapper d-flex justify-content-center">
-      <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
-        <a class="navbar-brand brand-logo" href="index.html"><img src="../../../assets/images/logos.PNG"alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="../../../assets/images/sopralogo.png" alt="logo"/></a>
-        <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+      <div
+        class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100"
+      >
+        <a class="navbar-brand brand-logo" href="index.html"
+          ><img src="../../../assets/images/logos.PNG" alt="logo"
+        /></a>
+        <a class="navbar-brand brand-logo-mini" href="index.html"
+          ><img src="../../../assets/images/sopralogo.png" alt="logo"
+        /></a>
+        <button
+          class="navbar-toggler navbar-toggler align-self-center"
+          type="button"
+          data-toggle="minimize"
+        >
           <span class="mdi mdi-sort-variant"></span>
         </button>
-      </div>  
+      </div>
     </div>
-    <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
+    <div
+      class="navbar-menu-wrapper d-flex align-items-center justify-content-end"
+    >
       <ul class="navbar-nav mr-lg-4 w-100">
         <li class="nav-item nav-search d-none d-lg-block w-100">
-          <h3 class="mb-0 " style="font-family: Georgia, 'Times New Roman', Times, serif; color: rgb(105, 97, 97);">Espace Manager Rh</h3>
+          <h3
+            class="mb-0"
+            style="
+              font-family: Georgia, 'Times New Roman', Times, serif;
+              color: rgb(105, 97, 97);
+            "
+          >
+            Espace Manager Rh
+          </h3>
         </li>
       </ul>
+      <ul class="navbar-nav mr-lg-4 w-100">
+        <li class="nav-item nav-search d-none d-lg-block w-100">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="search">
+                <i class="mdi mdi-magnify"></i>
+              </span>
+            </div>
+            <input
+              type="text"
+              [(ngModel)]="searchTermm"
+              (ngModelChange)="onSearchTermmChange()"
+              class="form-control"
+              placeholder="Search now"
+              aria-label="search"
+              aria-describedby="search"
+            />
+            <div class="user-list" *ngIf="searchTermm && searchTermm.trim()">
+              <ng-container *ngIf="filteredUsers.length > 0; else noUsersFound">
+                <ng-container *ngFor="let user of filteredUsers">
+                  <a class="dropdown-item" (click)="redirectionChat(user.id)">
+                    <div class="item-thumbnail">
+                      <img [src]="'assets/images/' + user.image" alt="image" class="profile-pic" />
+                    </div>
+                    <div class="item-content flex-grow">
+                      <h6 class="ellipsis font-weight-normal">{{ user.nom }} {{ user.prenom }}</h6>
+                    </div>
+                  </a>
+                </ng-container>
+              </ng-container>
+              <ng-template #noUsersFound>
+                <div class="dropdown-item">
+                  Aucun utilisateur trouvé avec ce nom
+                </div>
+              </ng-template>
+            </div>
+          </div>
+        </li>
+      </ul>
+      
+      
       <ul class="navbar-nav navbar-nav-right">
         <li class="nav-item dropdown me-1">
-          <a class="nav-link count-indicator dropdown-toggle d-flex justify-content-center align-items-center" id="messageDropdown" href="#" data-bs-toggle="dropdown">
+          <a
+            class="nav-link count-indicator dropdown-toggle d-flex justify-content-center align-items-center"
+            id="messageDropdown"
+            href="#"
+            data-bs-toggle="dropdown"
+          >
             <i class="mdi mdi-message-text mx-0"></i>
             <span class="count"></span>
           </a>
+          <div
+            class="dropdown-menu dropdown-menu-right navbar-dropdown"
+            aria-labelledby="messageDropdown"
+          >
+            <p class="mb-0 font-weight-normal float-left dropdown-header">
+              Messages
+            </p>
+            <input
+              type="text"
+              [(ngModel)]="searchTerm"
+              (ngModelChange)="onSearchTermChange()"
+              placeholder="Rechercher un utilisateur"
+              class="form-control"
+            />
+            <div class="user-list">
+              <ng-container *ngFor="let user of filteredUsers; let i = index">
+                <a class="dropdown-item"               (click)="redirectionChat(user.id)"
+                >
+                  <div class="item-thumbnail">
+                    <img
+                      [src]="'assets/images/' + user.image"
+                      alt="image"
+                      class="profile-pic"
+                    />
+                  </div>
+                  <div class="item-content flex-grow">
+                    <h6 class="ellipsis font-weight-normal">
+                      {{ user.nom }} {{ user.prenom }}
+                    </h6>
+                  </div>
+                </a>
+              </ng-container>
+            </div>
+          </div>
+        </li>
+        <li class="nav-item dropdown me-4">
+          <a
+            class="nav-link count-indicator dropdown-toggle d-flex align-items-center justify-content-center notification-dropdown"
+            id="notificationDropdown"
+            href="#"
+            data-bs-toggle="dropdown"
+          >
+            <i class="mdi mdi-bell mx-0"></i>
+            <span class="count" *ngIf="hasUnseenNotifications"></span>
+          </a>
+          <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="notificationDropdown">
+            <p class="mb-0 font-weight-normal float-left dropdown-header">Notifications</p>
+            <a class="dropdown-item notification-item" *ngFor="let notification of notifications" [ngClass]="{'notification-unseen': !notification.seen, 'notification-seen': notification.seen}" (click)="redirectToPage(notification)">
+              <div *ngIf="!notification.seen" class="notification-pill">Nouveau</div>
+          
+              <div class="item-thumbnail">
+                <img [src]="'assets/images/' + notification.sender.image" alt="image" class="profile-pic" />
+              </div>
+              <div class="item-content flex-grow">
+                <h6 class="ellipsis font-weight-normal">{{ notification.sender.nom }} {{ notification.sender.prenom }}</h6>
+                <div [innerHTML]="notification.message"></div>
+              </div>
+            </a>
+          </div>
           
         </li>
-       
 
         <li class="nav-item nav-profile dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
-            <img [src]="'assets/images/' + image" alt="profile"/>
-            <span class="nav-profile-name">{{username}}</span>
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            data-bs-toggle="dropdown"
+            id="profileDropdown"
+          >
+            <img [src]="'assets/images/' + image" alt="profile" />
+            <span class="nav-profile-name">{{ username }}</span>
           </a>
-          <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
+          <div
+            class="dropdown-menu dropdown-menu-right navbar-dropdown"
+            aria-labelledby="profileDropdown"
+          >
             <a class="dropdown-item" [routerLink]="['/managerRh/profile']">
               <i class="mdi mdi-settings text-primary"></i>
               Mon Compte
             </a>
             <a class="dropdown-item" (click)="logout()">
-              <i class="mdi mdi-logout text-primary" ></i>
+              <i class="mdi mdi-logout text-primary"></i>
               Se deconnecter
             </a>
           </div>
         </li>
       </ul>
-      <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
+      <button
+        class="navbar-toggler navbar-toggler-right d-lg-none align-self-center"
+        type="button"
+        data-toggle="offcanvas"
+      >
         <span class="mdi mdi-menu"></span>
       </button>
     </div>
@@ -55,72 +189,152 @@
     <!-- partial:partials/_sidebar.html -->
     <nav class="sidebar sidebar-offcanvas" id="sidebar">
       <ul class="nav">
-        <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <li
+          class="nav-item"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
           <a class="nav-link" [routerLink]="['/managerRh/dashboard']">
             <i class="mdi mdi-home menu-icon"></i>
             <span class="menu-title">Dashboard</span>
           </a>
         </li>
-        <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" >
-          <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+        <li
+          class="nav-item"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
+          <a
+            class="nav-link"
+            data-bs-toggle="collapse"
+            href="#auth"
+            aria-expanded="false"
+            aria-controls="auth"
+          >
             <i class="mdi mdi-account menu-icon"></i>
             <span class="menu-title">Personnels</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="auth">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> <a class="nav-link" [routerLink]="['/managerRh/all-manager-service']" > Manager Service </a></li>
-              <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> <a class="nav-link"  [routerLink]="['/managerRh/all-collaborateur']"> Collaborateur </a></li>
-              <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> <a class="nav-link"  [routerLink]="['/managerRh/all-formateurs']"> Formateur </a></li>
-
-           </ul>
+              <li
+                class="nav-item"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+              >
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerRh/all-manager-service']"
+                >
+                  Manager Service
+                </a>
+              </li>
+              <li
+                class="nav-item"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+              >
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerRh/all-collaborateur']"
+                >
+                  Collaborateur
+                </a>
+              </li>
+              <li
+                class="nav-item"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+              >
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerRh/all-formateurs']"
+                >
+                  Formateur
+                </a>
+              </li>
+            </ul>
           </div>
         </li>
-        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-          <a class="nav-link" [routerLink]="['/managerRh/competence']" >
+        <li
+          class="nav-item"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
+          <a class="nav-link" [routerLink]="['/managerRh/competence']">
             <i class="mdi mdi-book-open-page-variant menu-icon"></i>
             <span class="menu-title">Competences</span>
           </a>
         </li>
-     
-        <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-          <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="auth">
+
+        <li
+          class="nav-item"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
+          <a
+            class="nav-link"
+            data-bs-toggle="collapse"
+            href="#ui-basic"
+            aria-expanded="false"
+            aria-controls="auth"
+          >
             <i class="mdi mdi mdi-briefcase menu-icon"></i>
             <span class="menu-title">Fiches de poste</span>
             <i class="menu-arrow"></i>
-      
           </a>
           <div class="collapse" id="ui-basic">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> <a class="nav-link" [routerLink]="['/managerRh/demande-poste']" > Nouvelles Demandes</a></li>
-              <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> <a class="nav-link"  [routerLink]="['/managerRh/poste-candidats']"> Candidatures</a></li>
-           </ul>
+              <li
+                class="nav-item"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+              >
+                <a class="nav-link" [routerLink]="['/managerRh/demande-poste']">
+                  Nouvelles Demandes</a
+                >
+              </li>
+              <li
+                class="nav-item"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+              >
+                <a
+                  class="nav-link"
+                  [routerLink]="['/managerRh/poste-candidats']"
+                >
+                  Candidatures</a
+                >
+              </li>
+            </ul>
           </div>
         </li>
-        <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <li
+          class="nav-item"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
           <a class="nav-link" [routerLink]="['/managerRh/mes-entretiens-Rh']">
             <i class="mdi mdi-camcorder menu-icon"></i>
             <span class="menu-title">Mes Entretiens </span>
           </a>
         </li>
-        <li class="nav-item"  routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <li
+          class="nav-item"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+        >
           <a class="nav-link" [routerLink]="['/managerRh/all-formations']">
             <i class="mdi mdi-file-document-box-outline menu-icon"></i>
             <span class="menu-title">Formations</span>
           </a>
         </li>
-     
-       
       </ul>
     </nav>
     <!-- partial -->
     <div class="main-panel">
       <div class="content-wrapper">
-     
-       
-        
         <router-outlet></router-outlet>
-       
       </div>
       <!-- content-wrapper ends -->
       <!-- partial:partials/_footer.html -->
@@ -128,15 +342,20 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6 text-center text-lg-start">
-              <span class="text-muted">© 2024 4YOU Sopra HR. Tous droits réservés.</span>
+              <span class="text-muted"
+                >© 2024 4YOU Sopra HR. Tous droits réservés.</span
+              >
             </div>
             <div class="col-lg-6 text-center text-lg-end">
-              <span class="text-muted">Conçu avec <i class="mdi mdi-heart text-danger"></i> par votre équipe Sopra HR</span>
+              <span class="text-muted"
+                >Conçu avec <i class="mdi mdi-heart text-danger"></i> par votre
+                équipe Sopra HR</span
+              >
             </div>
           </div>
         </div>
       </footer>
-      
+
       <!-- partial -->
     </div>
     <!-- main-panel ends -->
